[package]
name = "brownie_pdf_cracker"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
indicatif = "*"
pdf = "0.8.1"
rayon = "1.7.0"
log = "0.4.14"    # Use a specific version of the log crate that is compatible
env_logger = "0.10.0" 
rand = "0.8.5" 
qpdf = "0.1.6"

[[bin]]
name = "brownie_pdf_cracker"
path = "src/main.rs"